# AdventOfCode

./: .clang-format  .gitignore  README.md  import.ts  pyproject.toml
2020/: compile_and_run_all.py
2020/day01/: day01.cpp
2020/day02/: day02.cpp
2020/day03/: day03.cpp
2020/day04/: day04.cpp
2020/day05/: day05.cpp
2020/day06/: day06.cpp
2020/day07/: day07.cpp
2020/day08/: day08.cpp
2020/day09/: day09.cpp
2020/day10/: day10.cpp
2020/day11/: day11.cpp
2020/day12/: day12.cpp
2020/day13/: day13.cpp
2020/day14/: day14.cpp
2020/day15/: day15.cpp
2021/day01/: solve-day1.ts
2021/day02/: solve-day2.ts
cpp/: startup.h
day3/: solve-day3.ts
day4/: solve-day4.ts
day5/: solve-day5.ts
day6/: solve-day6.ts
dotnet/: .editorconfig  AdventOfCode.csproj  Program.cs  Solvable.cs  dotnet.sln
rust/: .gitignore  Cargo.toml
rust/data/year2024/: day13_test2  day20_test2  day23.graphml  day23_final.cys  day23_test1.graphml  day24.cys  day24.graphml  day24_2.graphml  day24_fixed.graphml
rust/src/: lib.rs  main.rs
rust/src/year2022/: day01.rs
rust/src/year2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
rust/src/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day10_color.rs  day11.rs  day12.rs  day12_color.rs  day13.rs  day13_verbose.rs  day14.rs  day15.rs  day16.rs  day16_color.rs  day16_v2.rs  day17.rs  day18.rs  day18_color.rs  day19.rs  day20.rs  day20_color.rs  day21.rs  day22.rs  day23.rs  day23_graphml.rs  day24.rs  day25.rs
rust/src/year2025/: day01.rs
(+143 files in other folders)
