[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
itertools = "0.13.0"
regex = "1"
num = "0.4"
colored = "2.2.0"
rangemap = "1.5.1"
grid = "0.15.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
memoize = "0.4.2"
rand = "0.8"
gif = "0.13.1"
priority-queue = "2.1.1"
petgraph = "0.6.5"
petgraph-graphml = "3.1.0"

